# contractpilot

./: .gitignore  README.md  codebase-analysis.md  docker-compose.yml
backend/: agent.py  chat.py  exa_search.py  k2_client.py  main.py  models.py  ocr.py  prompts.py  pyproject.toml  report_generator.py  tools.py  vultr_rag.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/convex/: auth.ts  clauses.ts  credits.ts  http.ts  reviews.ts  schema.ts  users.ts
frontend/convex/_generated/: api.d.ts  api.js  dataModel.d.ts  server.d.ts  server.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/flowglad/[...path]/: route.ts
frontend/src/app/api/review/: route.ts
frontend/src/app/billing/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/review/[id]/: page.tsx
frontend/src/components/: ActionItems.tsx  BillingGate.tsx  ClauseCard.tsx  ClauseChat.tsx  ClausePanel.tsx  ClauseSidebar.tsx  ConvexClientProvider.tsx  DeepReviewView.tsx  PDFViewer.tsx  PaywallBlur.tsx  PricingCards.tsx  QuickSummaryView.tsx  RiskBreakdownChart.tsx  RiskDashboard.tsx  RiskScoreGauge.tsx  RiskTimeline.tsx  SummaryPanel.tsx  ThemeToggle.tsx  UploadDropzone.tsx  UserMenu.tsx
frontend/src/contexts/: PlanContext.tsx
frontend/src/lib/: api.ts  flowglad.ts  motion.ts  report.ts
